--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -1,8 +1,18 @@
 {
+  "AI_NAME": "AI Name",
+  "AI_1": "AI 1",
+  "AI_1_NAME": "AI 1 Name",
+  "AI_2": "AI 2",
+  "AI_2_NAME": "AI 2 Name",
   "AI_VS_AI": "AI vs. AI",
   "APP_TITLE": "Hexapawn",
   "HUMAN_VS_AI": "Human vs. AI",
   "HUMAN_VS_HUMAN": "Human vs. Human",
+  "PLAYER_1": "Player 1",
+  "PLAYER_1_NAME": "Player 1 name",
+  "PLAYER_2": "Player 2",
+  "PLAYER_2_NAME": "Player 2 name",
   "RETURN_TO_MAIN_MENU": "Return to main menu",
-  "SETUP_GAME": "Setup Game"
+  "SETUP_GAME": "Setup Game",
+  "START_GAME": "Start Game"
 }
