Dove deep into game logic
Created tools view as well

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -13,6 +13,7 @@
   "PLAYER_2": "Player 2",
   "PLAYER_2_NAME": "Player 2 name",
   "REPEAT_GAME": "Repeat game",
+  "RANDOM_MOVE": "'Random' move",
   "RETURN_TO_MAIN_MENU": "Back to main menu",
   "SETUP_GAME": "Setup Game",
   "START_GAME": "Start Game",
