--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -12,7 +12,8 @@
   "PLAYER_1_NAME": "Nombre de Jugador 1",
   "PLAYER_2": "Jugador 2",
   "PLAYER_2_NAME": "Nombre de Jugador 2",
-  "REPEAT_GAME": "Repetir juego",  
+  "REPEAT_GAME": "Repetir juego",
+  "RANDOM_MOVE": "Movida 'aleatoria'",
   "RETURN_TO_MAIN_MENU": "Return to main menu",
   "SETUP_GAME": "Parámetros de Juego",
   "START_GAME": "Iniciar Juego",
