Exploration and dissapointment
I haven’t been able to correctly generate all legal boards yet.

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -8,6 +8,7 @@
   "APP_TITLE": "Hexapawn",
   "HUMAN_VS_AI": "Human vs. AI",
   "HUMAN_VS_HUMAN": "Human vs. Human",
+  "NO_MOVE_FOR": "No move for",
   "PLAYER_1": "Player 1",
   "PLAYER_1_NAME": "Player 1 name",
   "PLAYER_2": "Player 2",
