--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -8,6 +8,7 @@
   "APP_TITLE": "Hexapeón",
   "HUMAN_VS_AI": "Humano vs. IA",
   "HUMAN_VS_HUMAN": "Humano vs. Humano",
+  "NO_MOVE_FOR": "No hay movidas para",
   "PLAYER_1": "Jugador 1",
   "PLAYER_1_NAME": "Nombre de Jugador 1",
   "PLAYER_2": "Jugador 2",
