Refactored code to permit learning algorithm to do its job.

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -6,16 +6,19 @@
   "AI_2_NAME": "AI 2 Name",
   "AI_VS_AI": "AI vs. AI",
   "APP_TITLE": "Hexapawn",
+  "EXPORT_JSON": "Export JSON",
+  "GAME": "Game",
   "HUMAN_VS_AI": "Human vs. AI",
   "HUMAN_VS_HUMAN": "Human vs. Human",
+  "MOVE": "Move",
+  "NEW_GAME": "New game",
   "NO_MOVE_FOR": "No move for",
   "PLAYER_1": "Player 1",
   "PLAYER_1_NAME": "Player 1 name",
   "PLAYER_2": "Player 2",
   "PLAYER_2_NAME": "Player 2 name",
-  "REPEAT_GAME": "Repeat game",
   "RANDOM_MOVE": "'Random' move",
-  "RETURN_TO_MAIN_MENU": "Back to main menu",
+  "RETURN_TO_MAIN_MENU": "Exit to menu",
   "SETUP_GAME": "Setup Game",
   "START_GAME": "Start Game",
   "TIE": "Tie",
