Started on the learning code, seemingly messed up on the aftermath of resignation and lack of moves, created a disappearing piece.

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -12,12 +12,13 @@
   "HUMAN_VS_HUMAN": "Human vs. Human",
   "MOVE": "Move",
   "NEW_GAME": "New game",
-  "NO_MOVE_FOR": "No move for",
+  "NO_MOVE_FOR": "loses. No more moves.",
   "PLAYER_1": "Player 1",
   "PLAYER_1_NAME": "Player 1 name",
   "PLAYER_2": "Player 2",
   "PLAYER_2_NAME": "Player 2 name",
   "RANDOM_MOVE": "'Random' move",
+  "RESIGNS": "Resigns",
   "RETURN_TO_MAIN_MENU": "Exit to menu",
   "SETUP_GAME": "Setup Game",
   "START_GAME": "Start Game",
