--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -12,12 +12,13 @@
   "HUMAN_VS_HUMAN": "Humano vs. Humano",
   "MOVE": "Movida",
   "NEW_GAME": "Nuevo Juego",
-  "NO_MOVE_FOR": "No hay movidas para",
+  "NO_MOVE_FOR": "pierde. No hay movidas.",
   "PLAYER_1": "Jugador 1",
   "PLAYER_1_NAME": "Nombre de Jugador 1",
   "PLAYER_2": "Jugador 2",
   "PLAYER_2_NAME": "Nombre de Jugador 2",
   "RANDOM_MOVE": "Movida 'aleatoria'",
+  "RESIGNS": "se Rinde",
   "RETURN_TO_MAIN_MENU": "Return to main menu",
   "SETUP_GAME": "Parámetros de Juego",
   "START_GAME": "Iniciar Juego",
