Extensive refactoring to prepare for showing logic

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -7,6 +7,7 @@
   "AI_VS_AI": "AI vs. AI",
   "APP_TITLE": "Hexapawn",
   "GAME": "Game",
+  "HIDE_LOGIC": "Hide Logic",
   "HUMAN_VS_AI": "Human vs. AI",
   "HUMAN_VS_HUMAN": "Human vs. Human",
   "MOVE": "Move",
