--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -7,6 +7,7 @@
   "AI_VS_AI": "IA vs. IA",
   "APP_TITLE": "Hexapeón",
   "GAME": "Juego",
+  "HIDE_LOGIC": "Ocultar Lógica",
   "HUMAN_VS_AI": "Humano vs. IA",
   "HUMAN_VS_HUMAN": "Humano vs. Humano",
   "MOVE": "Movida",
