Show Logic completed!

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -10,6 +10,7 @@
   "HIDE_LOGIC": "Hide Logic",
   "HUMAN_VS_AI": "Human vs. AI",
   "HUMAN_VS_HUMAN": "Human vs. Human",
+  "LOGIC_FOR": "Logic for",
   "MOVE": "Move",
   "NEW_GAME": "New game",
   "NO_MOVE_FOR": "loses. No more moves.",
