--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -10,6 +10,7 @@
   "HIDE_LOGIC": "Ocultar Lógica",
   "HUMAN_VS_AI": "Humano vs. IA",
   "HUMAN_VS_HUMAN": "Humano vs. Humano",
+  "LOGIC_FOR": "Lógica para",
   "MOVE": "Movida",
   "NEW_GAME": "Nuevo Juego",
   "NO_MOVE_FOR": "pierde. No hay movidas.",
