Created the logic so that AI's will store their learning

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -19,6 +19,7 @@
   "PLAYER_2": "Player 2",
   "PLAYER_2_NAME": "Player 2 name",
   "RANDOM_MOVE": "'Random' move",
+  "RESET_AI": "Reset AI",
   "RESIGNS": "Resigns",
   "RETURN_TO_MAIN_MENU": "Exit to menu",
   "SETUP_GAME": "Setup Game",
