Beautification and removal of pedantic code that penalized ties

--- a/core/services/i18n/EN.json
+++ b/core/services/i18n/EN.json
@@ -13,7 +13,7 @@
   "LOGIC_FOR": "Logic for",
   "MOVE": "Move",
   "NEW_GAME": "New game",
-  "NO_MOVE_FOR": "loses. No more moves.",
+  "NO_MOVE_FOR": "ties. No more moves.",
   "PLAYER_1": "Player 1",
   "PLAYER_1_NAME": "Player 1 name",
   "PLAYER_2": "Player 2",
