--- a/core/services/i18n/ES.json
+++ b/core/services/i18n/ES.json
@@ -13,7 +13,7 @@
   "LOGIC_FOR": "Lógica para",
   "MOVE": "Movida",
   "NEW_GAME": "Nuevo Juego",
-  "NO_MOVE_FOR": "pierde. No hay movidas.",
+  "NO_MOVE_FOR": "empata. No hay movidas.",
   "PLAYER_1": "Jugador 1",
   "PLAYER_1_NAME": "Nombre de Jugador 1",
   "PLAYER_2": "Jugador 2",
